<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TrackingForMyBullenTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainMenu_tile">Tracking for my Bullen time</string>
    <string name="mainMenu_btn_track">Track</string>
    <string name="mainMenu_btn_advancedTrack">Advanced Tracking</string>
    <string name="register_title">Register</string>
    <string name="register_lbn_username">Username</string>
    <string name="register_lbn_email">Email</string>
    <string name="register_lbn_password">Passwort</string>
    <string name="register_lbn_reapeatPassword">Passwort wiederholen</string>
    <string name="register_btn_submit">Fertig</string>
    <string name="login_lbn_title">Login</string>
    <string name="login_lbn_username">Username</string>
    <string name="login_lbn_password">Password</string>
    <string name="btn_login_submit">Login</string>
    <string name="main_btn_AroundMe">Around me</string>
    <string name="loading_title">Titel</string>
    <string name="trackView_btn_track">Track</string>
    <string name="trackView_btn_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="m_register">Registrieren</string>
    <string name="userData_lbn_title">Nutzerdaten</string>
    <string name="userdata_lbn_username">Benutzername:</string>
    <string name="userdata_lbn_usernameValue">Value</string>
    <string name="userdata_lbn_emailTitle">E-mail Addresse</string>
    <string name="userdata_btn_lastTrack">Letzter Track</string>
    <string name="userdata_lbn_tracksTitle">Alle Tracks</string>
    <string name="menu_userdata">Benutzerdaten</string>
    <string name="m_login">Anmelden</string>

</resources>
