<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.juanah.trackingformybullentime.MainActivity" >

    <Button
        android:id="@+id/btn_mainTrack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/mainMenu_btn_track"
        android:onClick="onTrack"
         />

    <Button
        android:id="@+id/btn_mainAdvancedTrack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_btn_advancedTrack" />

    <Button
        android:id="@+id/btn_mainAroundMe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_AroundMe"
        android:onClick="onAroundMe" />

    <ProgressBar
        android:id="@+id/progressBar_status"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp" />

</LinearLayout>
